; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_float.c_cosd_0_to_60.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_float.c_cosd_0_to_60.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RADIANS_PER_DEGREE = common dso_local global double 0.000000e+00, align 8
@one_minus_cos_60 = common dso_local global double 0.000000e+00, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (double (double)* @cosd_0_to_60 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @cosd_0_to_60(double %0) #0 {
  %2 = alloca double, align 8
  %3 = alloca double, align 8
  store double %0, double* %2, align 8
  %4 = load double, double* %2, align 8
  %5 = load double, double* @RADIANS_PER_DEGREE, align 8
  %6 = fmul double %4, %5
  %7 = call double @cos(double %6) #2
  %8 = fsub double 1.000000e+00, %7
  store volatile double %8, double* %3, align 8
  %9 = load volatile double, double* %3, align 8
  %10 = load volatile double, double* @one_minus_cos_60, align 8
  %11 = fdiv double %9, %10
  %12 = fdiv double %11, 2.000000e+00
  %13 = fsub double 1.000000e+00, %12
  ret double %13
}

; Function Attrs: nounwind
declare dso_local double @cos(double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
